Corrections/improvements in regards to fs.copyFileSync.
- Strangely even though fs.copyFileSync was never used as #306 checked it too strictly the copy times were faster. This made me initially falsely believe that it was active. Seemingly another commit must have had an improving effect compared to v1.0.0 (maybe b508a5631894724643b8032f2267bffebbe6bdf1?).
- Changed it so that fs.copyFileSync really now is always used if it's possible. With this the difference is like night & day!
- Furthermore fixed that missing sub-directories weren't created.
- Added an option to make it switchable. The default is true. Meaning the options encoding & process can't be used unless you explicitly deactivate useFsCopy.
- Also copyFileSync shouldn't skip the logic in regards to syncTimestamp and chmodSync.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+v1.1.1:
+  date: 2023-07-19
+  changes:
+    - Corrections/improvements in regards to using fs.copyFileSync. This is now the default.
+v1.1.0:
+  date: 2023-07-18
+  changes:
+    - Use fs.copyFileSync if possible to highly improve copy speed.
 v1.0.0:
   date: 2016-03-04
   changes:
